--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        },
 	    
           	    
-       cantonescr = L.geoJson(cantones, {
+       var cantonescr = L.geoJson(cantones, {
        style: function (feature) {
 	  return {
           fillColor:'#0000ff'
