--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
 	
       cantonescr.addTo(map); 
 	    
+	function onEachFeature(feature, layer) {
+	var popupContent = "";
+	if (feature.properties && feature.properties.NCANTON) {
+	  popupContent += feature.properties.NCANTON;
+	}
+       	layer.bindPopup(popupContent);
+      },
+      onEachFeature: onEachFeature
+      }).addTo(map);
+    	   
        var baseLayers = {
        "OpenStreetMap":osm,
        "mapbox":mbox 
