--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 	var popupContent = "";
 	if (feature.properties && feature.properties.NCANTON) {
 	  popupContent += feature.properties.NCANTON;
+	} else {
+	  popupContent += 0; 
 	}
        	layer.bindPopup(popupContent);
-      },
+      }
+	    
       onEachFeature: onEachFeature
       }).addTo(map);
     	   
