--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       }
 	    
       onEachFeature: poblacion
-   
+      poblacion.addTo(map);
     	   
        var baseLayers = {
        "OpenStreetMap":osm,
